# CompiladorD

./: CMakeLists.txt  README.md  makefile
P1Compiladores/: SistemaEntrada.c  SistemaEntrada.h  abb.c  abb.h  definiciones.h  errores.c  errores.h  gestionerrores.c  gestionerrores.h  lexico.c  lexico.h  main.c  regressionImport.d  sintactico.c  sintactico.h  sistemaEntrada.c  tabladesimbolos.c  tabladesimbolos.h
